# CrewAI-Projects

./: README.md
enterprise-sales-pdf/: .env.example  README.md  pyproject.toml  sales_pdf_text.md  streamlit_app.py
enterprise-sales-pdf/src/enterprise_sales_pdf/: __init__.py  main.py
job-market-research/: README.md  pyproject.toml
job-market-research/output/: job_market_report.md
job-market-research/src/job_market_research/: __init__.py
job-market-research/src/job_market_research/crews/: crew.py  main.py
latest_ai_development/: README.md  report.md
latest_ai_development/knowledge/: user_preference.txt
trip-planner-agent/: .env  .env.example  README.md  pyproject.toml  streamlit_app.py
trip-planner-agent/output/: imp_notes.md
trip-planner-agent/src/trip_planner_agent/: __init__.py
trip-planner-agent/src/trip_planner_agent/crews/: main.py  trip_crew.py
