[project]
name = "enterprise-sales-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Huzaifa", email = "muhammadhuzaifaai890@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "markdown-pdf>=1.3.3",
    "pydantic>=2.10.6",
    "streamlit>=1.43.0",
]

[project.scripts]
enterprise-sales-pdf = "enterprise_sales_pdf:main"
crew_run = "enterprise_sales_pdf.main:run"
train = "enterprise_sales_pdf.main:train"
replay = "enterprise_sales_pdf.main:replay"
test = "enterprise_sales_pdf.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
