[project]
name = "job-market-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Huzaifa", email = "muhammadhuzaifaai890@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
job-market-research = "job_market_research:main"
kickflow="job_market_research.crews.main:flow_run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
