[project]
name = "trip-planner-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Huzaifa", email = "muhammadhuzaifaai890@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "streamlit>=1.42.2",
]

[project.scripts]
trip-planner-agent = "trip_planner_agent:main"
run="trip_planner_agent.crews.main:flow_run"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
